# discord-bot-pycon2023

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: basics-ex-1.py  cogs-ex-2.py  components-ex-1.py  env.py  example.py  exercise-1.py  main.py
src/code-examples/: example-basics-ex-1.py  example-cogs-ex-2.py
src/code-examples/cogs/: message.py
src/cogs/: gamer.py  message.py
src/exercises/: cogs-ex-2.py
src/exercises/cogs/: message.py
src/solutions/: solution-basics-ex-1.py  solution-cogs-ex-2.py
src/solutions/cogs/: message.py
